--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,20 @@ Package: comorment.funcenrich
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Jacob", "Bergstedt", , "jacob.bergstedt@ki.se", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+Imports: 
+    dplyr,
+    fs,
+    GenomicSEM,
+    glue,
+    rlang,
+    stringr,
+    tibble
+Depends: 
+    R (>= 2.10)
